# nginx_debug_cmake_learning

./: .gitignore  CMakeLists.txt  README.md
conf/: nginx.conf
src/: config  ngx_http_hello_world_module.c
